--- a/frontend/angular-react/modules/main/admin_main.html
+++ b/frontend/angular-react/modules/main/admin_main.html
@@ -4,8 +4,10 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="logo pull-left">
-						Admin
-						
+						<img src="images/Sports-Running-Man-icon-green.png" class="project_logo_image" />
+					</div>
+					<div class="logo pull-left project_logo_font">
+						 FitShopJS  <span style="color: #fff;">Admin</span> 
 					</div>
 				</div>
 				<div class="col-sm-8">
@@ -29,11 +31,11 @@
 				<div class="category-tab"><!--category-tab-->
 					<div class="col-sm-12">
 						<ul class="nav nav-tabs section_color3">
-							<li class="active"><a href="#products_section" >Products</a></li>
-							<li><a href="#shopping_cart_section" >Categories</a></li>
-							<li><a href="#shopping_cart_section" >Orders</a></li>
-							<li><a href="#payment_section" >Users</a></li>
-							<li><a href="#result_section" >Privileges</a></li>
+							<li class="active"><a href="#products" >Products</a></li>
+							<li><a href="#categories" >Categories</a></li>
+							<li><a href="#orders" >Orders</a></li>
+							<li><a href="#users" >Users</a></li>
+							<li><a href="#privileges" >Privileges</a></li>
 						</ul>
 					</div>
 				</div><!--/category-tab-->
