Core - Session Angular - React - Shopping cart, session, catalogue search features.

--- a/frontend/angular-react/admin.html
+++ b/frontend/angular-react/admin.html
@@ -166,9 +166,15 @@
     <script src="react-build/react_admin_order_list.js"></script>
     <script src="react-build/react_admin_user_list.js"></script>
     <script src="react-build/react_admin_privilege_list.js"></script>
-
+    <!-- 
+	<script src="modules/offer/offer.js"></script>
+    -->
+	<script src="modules/account/account.js"></script>
 	<script src="modules/catalog/catalog.js"></script>
 	<script src="modules/shopping_cart/shopping_cart.js"></script>
+	<script src="modules/payment/payment.js"></script>
+	<script src="modules/order/order.js"></script>
+
 	<script src="admin_modules/catalog/admin_product.js"></script>
 	<script src="admin_modules/catalog/admin_category.js"></script>
 	<script src="admin_modules/order/admin_order.js"></script>
