--- a/frontend/angular-react/admin_modules/order/admin_order_main.html
+++ b/frontend/angular-react/admin_modules/order/admin_order_main.html
@@ -7,12 +7,13 @@
                         <h2 class="admin_title text-center">Orders</h2>
                         <div class="container admin_section_container section_color2">
                             <div class="row ">
+                                Orders
+                            <!-- 
                                 <a href="javascript:createNewOrderItem('show_order_form')"  class="btn btn-default admin_button">New Order</a>
+                            -->
                             </div>
                             <div class="row section_color1 container-items_admin" >
                                 <admin-order-list data="admin_order_list_data"></admin-order-list>
-                                
-
                             </div>
                         </div>
                         
@@ -28,7 +29,7 @@
         </div>
     </section>
 
-    <section id="show_order_form"  class="modalDialog modalDialogFormAdmin2" data-backdrop="static" >
+    <section id="show_order_form"  class="modalDialog" data-backdrop="static" >
         <div class="marginModalDialogFormAdmin">
             <a href="javascript:colseModal()" title="Close" class="close">X</a>
             <div class="">
