--- a/frontend/angular-react/index.html
+++ b/frontend/angular-react/index.html
@@ -31,14 +31,16 @@
 	<ng-view></ng-view>
 
     <script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/price-range.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
+    <!-- 
+    <script src="js/jquery-ui.min.js"></script>
+    -->
     <script src="js/jquery-ui/jquery-ui.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.scrollUp.min.js"></script>
+    <script src="js/jquery-ui/jquery-ui.js"></script>
+    <script src="js/price-range.js"></script>
+    <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/main.js"></script>
-
- 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   	<!-- Jimmy Custom JS-->
     <script src="js/our_js.js"></script>
 
