--- a/frontend/backbone/admin.html
+++ b/frontend/backbone/admin.html
@@ -1340,7 +1340,8 @@
     <script src="js/jquery-ui/jquery-ui.js"></script>
 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   	<!-- Jimmy Custom JS-->
-    <script src="js/our_js.js"></script>
+
+    <script src="js/core.js"></script>
 	
  
 	
