--- a/frontend/angular-react/index.html
+++ b/frontend/angular-react/index.html
@@ -46,7 +46,7 @@
     <script src="js/main.js"></script>
     -->
   	<!-- Jimmy Custom JS-->
-    <script src="js/our_js.js"></script>
+    <script src="js/core.js"></script>
 
     <!-- Jimmy Angular + React JS-->
     <script src="bower_components/angular/angular.min.js"></script>
