--- a/frontend/backbone/index.html
+++ b/frontend/backbone/index.html
@@ -659,7 +659,7 @@
 									<form class="css-form">
 									<input type="text" value="3" name="Quantite" id="Quantite">
 									</form>
-									<button class="btn-btn-fefault-cart" type="button" id="<%= name %>>
+									<button class="btn-btn-fefault-cart" type="button" id="<%= name %>">
 										<i class="fa fa-shopping-cart"></i>
 										Add to cart
 									</button>
@@ -741,6 +741,9 @@
 	</section>
 
 	<script src="js/jquery-latest.js"></script>
+	<script src="js/jquery-ui/jquery-ui.js"></script>
+    <script src="js/price-range.js"></script>
+    <script src="js/jquery-notify/src/jquery.notify.js" type="text/javascript"></script>
 	<script src="js/underscore-min.js"></script>
 	<script src="js/backbone-min.js"></script>
 	<script src="js/main.js"></script>
@@ -751,16 +754,10 @@
 	<script src="js/router.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/price-range.js"></script>
-	<script src="js/jquery.prettyPhoto.js"></script>
-	<script src="js/jquery-ui/jquery-ui.js"></script>
-	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<!-- Jimmy Custom JS-->
-	<script src="js/our_js.js"></script>
+	<script src="js/core.js"></script>
 
-	<!-- <script src="js/jquery.js"></script> -->
-
+	
 	<script>
 	new App.Router;
 	Backbone.history.start();
