--- a/frontend/angular-react/admin.html
+++ b/frontend/angular-react/admin.html
@@ -139,17 +139,19 @@
 	
 	<!-- Jimmy Template-->
     <script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/price-range.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
+    <!-- 
+    <script src="js/jquery-ui.min.js"></script>
+    -->
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-ui/jquery-ui.js"></script>
-    <script src="js/main.js"></script>
-
- 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script src="js/our_js.js"></script>
+    <script src="js/price-range.js"></script>
+    <script src="js/jquery-notify/src/jquery.notify.js" type="text/javascript"></script>
+    <script src="js/core.js"></script>
     
-  	<!-- Jimmy Angular + React JS-->
+  	<!-- Jimmy Custom JS-->
+    <script src="js/core.js"></script>
+
+    <!-- Jimmy Angular + React JS-->
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular/angular-route.min.js"></script>
     <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
@@ -158,10 +160,10 @@
 	
 	<script src="config.js"></script>
 	<!-- React Client	-->
-	<!-- 
+    <!-- 
     <script src="react-build/react_shopping_cart.js"></script>
     <script src="react-build/react_product_list.js"></script>
-	-->
+    -->
 	<!-- React Admin	-->
     <script src="react-build/react_admin_product_list.js"></script>
     <script src="react-build/react_admin_category_list.js"></script>
@@ -176,13 +178,13 @@
 	<script src="modules/shopping_cart/shopping_cart.js"></script>
 	<script src="modules/payment/payment.js"></script>
 	<script src="modules/order/order.js"></script>
-
 	<script src="admin_modules/catalog/admin_product.js"></script>
-	<script src="admin_modules/catalog/admin_category.js"></script>
-	<script src="admin_modules/order/admin_order.js"></script>
-	<script src="admin_modules/user/admin_user.js"></script>
-	<script src="admin_modules/user/admin_privilege.js"></script>
-	<script src="app.js"></script>
+    <script src="admin_modules/catalog/admin_category.js"></script>
+    <script src="admin_modules/order/admin_order.js"></script>
+    <script src="admin_modules/user/admin_user.js"></script>
+    <script src="admin_modules/user/admin_privilege.js"></script>
+	<script src="modules/others/ng-scrollto.js"></script>
+    <script src="app.js"></script>
   	<!-- Fin Angular + React JS-->
 </body>
 </html>
