Angular React Update Ok

--- a/frontend/angular-react/index.html
+++ b/frontend/angular-react/index.html
@@ -31,6 +31,7 @@
 <body ng-app="app">
 	<!--Container-->
 	<ng-view></ng-view>
+    
 
     <script src="js/jquery.js"></script>
     <!-- 
@@ -58,6 +59,7 @@
 	<script src="config.js"></script>
 	<!-- React Client	-->
     <script src="react-build/react_shopping_cart.js"></script>
+    <script src="react-build/react_order_result_list.js"></script>
     <script src="react-build/react_product_list.js"></script>
 	<!-- React Admin	-->
     <!-- 
