--- a/frontend/angular-react/admin.html
+++ b/frontend/angular-react/admin.html
@@ -62,9 +62,9 @@
 						<div class="col-sm-12">
 							<ul class="nav nav-tabs section_color3">
 								<li class="active"><a href="#products" >Products</a></li>
-								<li><a scroll-to="categories" >Categories</a></li>
-								<li><a scroll-to="orders" >Orders</a></li>
-								<li><a scroll-to="users" >Users</a></li>
+								<li><a href="#categories" >Categories</a></li>
+								<li><a href="#orders" >Orders</a></li>
+								<li><a href="#users" >Users</a></li>
 								<!-- 
 								<li><a href="#privileges" >Privileges</a></li>
 								-->
@@ -184,7 +184,7 @@
     <script src="admin_modules/user/admin_user.js"></script>
     <script src="admin_modules/user/admin_privilege.js"></script>
 	<script src="modules/others/ng-scrollto.js"></script>
-    <script src="app.js"></script>
+    <script src="app_admin.js"></script>
   	<!-- Fin Angular + React JS-->
 </body>
 </html>
