--- a/frontend/backbone/index.html
+++ b/frontend/backbone/index.html
@@ -225,15 +225,17 @@
 											<div class="product-image-wrapper">
 												<div class="single-products">
 													<div class="product_container">
-														<div class="productinfo text-left">
-															<img src="<%= image %>" style="width:60px; height:60px;" />
-															<div><b><%= name %></b></div>
-															<span>Brand</span>
-															<div class="row">
-																<div class="col-sm-6"><img alt="" src="images/product-details/rating.png"></div>
-																<div class="col-sm-6"><span class="price_product"><%= price %>€</span></div>
+														<a href="javascript:void(0);" >
+															<div class="productinfo text-left">
+																<img src="<%= image %>"  />
+																<div><b><%= name %></b></div>
+																<span>Brand</span>
+																<div class="row">
+																	<div class="col-sm-6"><img alt="" src="images/product-details/rating.png"></div>
+																	<div class="col-sm-6"><span class="price_product"><%= price %>€</span></div>
+																</div>
 															</div>
-														</div> 													
+														</a> 													
 														<div class="productinfo text-center">
 															<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 														</div>
